Fix horizontal scrollbar appearing in home

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -47,3 +47,7 @@ $grid-float-breakpoint: 992px;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#super-wrapper {
+  overflow: hidden;
+}
